--- a/go_back.cbp
+++ b/go_back.cbp
@@ -42,11 +42,14 @@
 			<Add library="/usr/lib/liballegro_physfs.so" />
 			<Add library="/usr/lib/liballegro_primitives.so" />
 			<Add library="/usr/lib/liballegro_image.so" />
+			<Add library="/usr/lib/libphysfs.a" />
 		</Linker>
 		<Unit filename="src/alhandler.cpp" />
 		<Unit filename="src/alhandler.hpp" />
 		<Unit filename="src/configloader.cpp" />
 		<Unit filename="src/configloader.hpp" />
+		<Unit filename="src/medialoader.cpp" />
+		<Unit filename="src/medialoader.hpp" />
 		<Unit filename="src/sub.cpp" />
 		<Unit filename="src/sub.hpp" />
 		<Extensions>
